k8-testing/k8-configuration/mongo-express.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
        - name: mongo-express
          image: artifactory.tools1-az1.digi.is/epea-docker-pull/mongo-express:latest
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              memory: 1Gi
              cpu: 2000m
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-express
spec:
  selector:
    app: mongo-express
    type: LoadBalancer # Uncomment for external service
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      #nodePort: 30000 # Uncomment for external service
