k8-testing/k8-configuration/mongo.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongo
          image: artifactory.tools1-az1.digi.is/epea-docker-pull/mongo:latest
          resources:
            requests:
              cpu: 100m
              memory: 200Mi
            limits:
              memory: 1Gi
              cpu: 2000m
          ports:
            - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
