k8-testing/k8-configuration/mongo-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name:  mongodb-ingress
spec:
  gateways:
  - gateway.default.svc.cluster.local
  hosts:
  - 'mongo-express.orange.cpt'
  http:
  - match:
    - uri:
       prefix: /
    route:
    - destination: 
        host: mongo-express
        port: 
          number: 8081
